<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:icon="@drawable/ic_menu_more"
        android:showAsAction="ifRoom"
        android:title="@string/action_contact">
        <menu>
            <item
                android:id="@+id/action_standard"
                android:showAsAction="ifRoom"
                android:title="@string/tv_standard"/>
            <item
                android:id="@+id/action_tablet"
                android:showAsAction="ifRoom"
                android:title="@string/tv_tablet"/>
            <item
                android:id="@+id/action_cube_in"
                android:showAsAction="ifRoom"
                android:title="@string/tv_cube_in"/>
            <item
                android:id="@+id/action_cube_out"
                android:showAsAction="ifRoom"
                android:title="@string/tv_cube_out"/>
            <item
                android:id="@+id/action_flip_vertical"
                android:showAsAction="ifRoom"
                android:title="@string/tv_flip_vertical"/>
            <item
                android:id="@+id/action_flip_horizontal"
                android:showAsAction="ifRoom"
                android:title="@string/tv_flip_horizontal"/>
            <item
                android:id="@+id/action_stack"
                android:showAsAction="ifRoom"
                android:title="@string/tv_stack"/>
            <item
                android:id="@+id/action_zoom_in"
                android:showAsAction="ifRoom"
                android:title="@string/tv_zoom_in"/>
            <item
                android:id="@+id/action_zoom_out"
                android:showAsAction="ifRoom"
                android:title="@string/tv_zoom_out"/>
            <item
                android:id="@+id/action_rotate_up"
                android:showAsAction="ifRoom"
                android:title="@string/tv_rotate_up"/>
            <item
                android:id="@+id/action_rotate_down"
                android:showAsAction="ifRoom"
                android:title="@string/tv_rotate_down"/>
            <item
                android:id="@+id/action_accordion"
                android:showAsAction="ifRoom"
                android:title="@string/tv_accordion"/>
            <item
                android:id="@+id/action_contact"
                android:icon="@drawable/ic_action_user"
                android:showAsAction="ifRoom"
                android:title="@string/action_contact"/>
        </menu>
    </item>

</menu>