<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:icon="@drawable/ic_menu_more"
        android:showAsAction="ifRoom"
        android:title="@string/tv_action_mode">
        <menu>
            <item
                android:id="@+id/action_translate"
                android:numericShortcut="0"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_translate"/>
            <item
                android:id="@+id/action_rotate_round_center"
                android:numericShortcut="1"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_rotate_round_center"/>
            <item
                android:id="@+id/action_rotate_round_horizontal"
                android:numericShortcut="2"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_rotate_round_horizontal"/>
            <item
                android:id="@+id/action_scale"
                android:numericShortcut="3"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_scale"/>
            <item
                android:id="@+id/action_skew_horizontal"
                android:numericShortcut="4"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_skew_horizontal"/>
            <item
                android:id="@+id/action_skew_vertical"
                android:numericShortcut="5"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_skew_vertical"/>
            <item
                android:id="@+id/action_skew_horizontal_vertical"
                android:numericShortcut="6"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_skew_horizontal_vertical"/>
            <item
                android:id="@+id/action_symmetrical_horizontal"
                android:numericShortcut="7"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_symmetrical_horizontal"/>
            <item
                android:id="@+id/action_symmetrical_vertical"
                android:numericShortcut="8"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_symmetrical_vertical"/>
            <item
                android:id="@+id/action_symmetrical_x_y"
                android:numericShortcut="9"
                android:showAsAction="ifRoom"
                android:title="@string/tv_matrix_symmetrical_x_y"/>
        </menu>
    </item>

</menu>